(lang dune 3.19)

(name coco)

(generate_opam_files true)

(source
 (github aebii/coco))

(authors "Anupam Bhakta <ab5494@columbia.edu>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name coco)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune re)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
