(lang dune 3.19)

(name coco)

(generate_opam_files true)

(source
 (github aebii/coco))

(authors "Anupam Bhakta <ab5494@columbia.edu>")

(license LICENSE)

(documentation https://github.com/ae-bii/coco )

(package
 (name coco)
 (synopsis "C compiler written in OCaml")
 (description "A C compiler written in OCaml in order to learn about compilers, OCaml, and functional programming.")
 (depends ocaml dune re)
 (tags
  ("c" "ocaml" "compilers")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
